MENU IOCN Z-INDEX FIXED

--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -80,6 +80,7 @@ a{
   position: absolute;
   top:40px;
   right: 30px;
+  z-index: 10;
   cursor: pointer;
 
   @include media-breakpoint-up(lg){
