--- a/styles/_portfolio.scss
+++ b/styles/_portfolio.scss
@@ -1,5 +1,8 @@
 .portfolio{
-  padding: 40px 0;
+  padding: 85px 0;
+  @include media-breakpoint-up(lg){
+    padding: 40px 0;
+  }
 }
 
 .slide {
