--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10396,6 +10396,7 @@ a {
   position: absolute;
   top: 40px;
   right: 30px;
+  z-index: 10;
   cursor: pointer; }
   @media (min-width: 992px) {
     .menu-icon {
@@ -10572,7 +10573,10 @@ img {
   -webkit-text-stroke-color: white; }
 
 .portfolio {
-  padding: 40px 0; }
+  padding: 85px 0; }
+  @media (min-width: 992px) {
+    .portfolio {
+      padding: 40px 0; } }
 
 .slide {
   background-size: cover;
